<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>company_information</name>
  <version>0.0.0</version>
  <description>
 here we use the customed interfaces from the package tutorial_interfaces
</description>
  <maintainer email="bot@todo.todo">bot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  
<build_depend>tutorial_interfaces</build_depend>
<exec_depend>tutorial_interfaces</exec_depend>

<build_depend>std_msgs</build_depend>
<exec_depend>std_msgs</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
